# Coala

./: .gitignore  README.md
src/: GQ_legendre_nodes_weights.f90  collision_kernels.f90  compute_solver_coag.f90  functions_flux_intflux.f90  functions_tabflux_tabintflux.f90  init_massgrid.f90  initial_condition_L2proj_GQ.f90  interface_coag.f90  interface_coala_coag.f90  limiter.f90  polynomials_legendre.f90  precision.f90  progress_bar.f90  reconstruction_g.f90  solver_DG.f90  tension_module.f90
src/coag_term/: coagflux_functions_GQ.f90  coagintflux_functions_GQ.f90
tests/: functions_plot.py  utils.f90
tests/collision_kernel_brownian/script_plot/: plots.py
tests/collision_kernel_brownian/src/: CMakeLists.txt  coala.f90  dust_dv.f90  iterate_coag.f90  iterate_coag_k0.f90  setup.f90
tests/collision_kernel_turb_ormel/script_plot/: plots.py
tests/collision_kernel_turb_ormel/src/: CMakeLists.txt  coala.f90  dust_dv.f90  initial_condition_L2proj_power_law.f90  iterate_coag.f90  iterate_coag_k0.f90  phy_cst.f90  setup.f90
tests/interface_coala_hydro/script_plot/: plots.py
tests/interface_coala_hydro/src/: CMakeLists.txt  coala_hydro.f90  dust_dv.f90
tests/simple_collision_kernels/scripts_plots/: plots.py
tests/simple_collision_kernels/src/: CMakeLists.txt  coala.f90  iterate_coag.f90  iterate_coag_k0.f90  setup.f90
